name:                reg-alloc
version:             0.1.0.0
-- synopsis:
-- description:
license:             MPL-2
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2019 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  reexported-modules:  RegAlloc
  build-depends:       private
  default-language:    Haskell2010

library private
  hs-source-dirs:      src
  exposed-modules:     RegAlloc
                     , RegAlloc.Interference
                     , RegAlloc.Nodes
                     , RegAlloc.Nodes.Private
                     , RegAlloc.UGraph
                     , RegAlloc.UGraph.Private
  build-depends:       Map
                     , base >= 4.8 && < 5
                     , base-unicode-symbols >= 0.2 && < 0.3
                     , containers >= 0.5 && < 0.7
                     , lenz >= 0.4 && < 0.5
                     , lenz-mtl >= 0.1 && < 0.2
                     , lenz-template
                     , microlens-mtl >= 0.2 && < 0.3
                     , mtl >= 2.0 && < 2.3
                     , peano >= 0.1 && < 0.2
                     , transformers >= 0.4 && < 0.6
                     , util >= 0.1.14 && < 0.2
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , BlockArguments
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Tests.RegAlloc
  build-depends:       base >=4.11 && <5
                     , base-unicode-symbols
                     , containers
                     , logict
                     , smallcheck >=1.1.4
                     , tasty >=1.0
                     , tasty-smallcheck >=0.8
                     , transformers
                     , util
                     , private
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , BlockArguments
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , criterion >=1.4.1
                     , reg-alloc
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , BlockArguments
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

source-repository head
  type:     git
  location: https://github.com/strake/reg-alloc.hs
